--- a/package.json
+++ b/package.json
@@ -3,9 +3,41 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "standard": {
+    "globals": [
+      "$"
+    ]
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server"
+    "test": "npm-run-all -s test:*",
+    "test:js": "standard ./src/js/**/*.js --verbose | snazzy",
+    "test:css": "stylelint ./src/css/**/*.css",
+    "clean": "rimraf dist/*",
+    "start": "npm-run-all -p server watch",
+    "server": "watch-http-server dist",
+    "watch": "npm-scripts-watcher",
+    "build": "npm-run-all -p build:*",
+    "build:html": "node ./lib/build_html",
+    "build:images": "ncp ./src/images ./dist/images",
+    "build:css": "postcss --use postcss-import autoprefixer postcss-cssnext postcss-browser-reporter postcss-reporter -o ./dist/main.css ./src/css/main.css",
+    "build:js": "browserify ./src/js/main.js -o ./dist/main.js"
+  },
+  "watch": {
+    "src/js": [
+      "build:js"
+    ],
+    "src/css": [
+      "build:css"
+    ],
+    "src/html": [
+      "build:html"
+    ],
+    "src/images": [
+      "build:images"
+    ]
   },
   "repository": {
     "type": "git",
@@ -19,6 +51,33 @@
   },
   "homepage": "https://github.com/mundizzle/napsa#readme",
   "devDependencies": {
-    "live-server": "0.9.2"
+    "browserify": "13.0.0",
+    "fs-extra": "0.26.5",
+    "glob-all": "3.0.1",
+    "gray-matter": "2.0.2",
+    "mkdirp": "0.5.1",
+    "ncp": "2.0.0",
+    "npm-run-all": "1.5.3",
+    "npm-scripts-watcher": "1.0.2",
+    "postcss-browser-reporter": "0.4.0",
+    "postcss-cli": "2.5.1",
+    "postcss-cssnext": "2.5.1",
+    "postcss-import": "8.0.2",
+    "postcss-reporter": "1.3.3",
+    "postcss-url": "5.1.1",
+    "rimraf": "2.5.2",
+    "snazzy": "3.0.0",
+    "standard": "6.0.8",
+    "stylelint": "5.0.1",
+    "stylelint-config-standard": "4.0.1",
+    "watch-http-server": "0.7.6"
+  },
+  "dependencies": {
+    "bootstrap": "4.0.0-alpha.2",
+    "handlebars": "4.0.5",
+    "handlebars-layouts": "3.1.3",
+    "jquery": "2.2.1",
+    "jqvmap": "1.0.1",
+    "tether": "1.2.0"
   }
 }
