--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "progress4primates",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://mundizzle.github.io/napsa",
   "devDependencies": {
     "react-scripts": "0.4.0"
   },
