--- a/package.json
+++ b/package.json
@@ -4,21 +4,57 @@
   "private": true,
   "homepage": "http://mundizzle.github.io/napsa",
   "devDependencies": {
-    "react-scripts": "0.4.0"
+    "autoprefixer": "6.4.0",
+    "babel-core": "6.14.0",
+    "babel-loader": "6.2.5",
+    "babel-plugin-transform-class-properties": "6.11.5",
+    "babel-plugin-transform-object-rest-spread": "6.8.0",
+    "babel-plugin-transform-react-constant-elements": "6.9.1",
+    "babel-plugin-transform-regenerator": "6.14.0",
+    "babel-plugin-transform-runtime": "6.15.0",
+    "babel-preset-latest": "6.14.0",
+    "babel-preset-react": "6.11.1",
+    "babel-runtime": "6.11.6",
+    "case-sensitive-paths-webpack-plugin": "1.1.3",
+    "chalk": "1.1.3",
+    "connect-history-api-fallback": "1.3.0",
+    "cross-spawn": "4.0.0",
+    "css-loader": "0.24.0",
+    "detect-port": "1.0.0",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "filesize": "3.3.0",
+    "fs-extra": "0.30.0",
+    "gzip-size": "3.0.0",
+    "html-loader": "0.4.3",
+    "html-webpack-plugin": "2.22.0",
+    "http-proxy-middleware": "0.17.1",
+    "json-loader": "0.5.4",
+    "object-assign": "4.1.0",
+    "opn": "4.0.2",
+    "path-exists": "3.0.0",
+    "postcss-loader": "0.11.1",
+    "promise": "7.1.1",
+    "recursive-readdir": "2.0.0",
+    "rimraf": "2.5.4",
+    "standard": "8.0.0",
+    "strip-ansi": "3.0.1",
+    "style-loader": "0.13.1",
+    "stylelint": "7.2.0",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.2",
+    "webpack-dev-server": "1.15.1",
+    "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
     "react": "15.3.1",
     "react-dom": "15.3.1",
     "react-router": "2.7.0",
-    "sanitize.css": "4.1.0"
+    "tachyons": "4.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "./node_modules/react-scripts/config/eslint.js"
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "deploy": "./deploy.sh"
   }
 }
