--- a/package.json
+++ b/package.json
@@ -4,57 +4,55 @@
   "private": true,
   "homepage": "http://mundizzle.github.io/napsa",
   "devDependencies": {
-    "autoprefixer": "6.4.0",
-    "babel-core": "6.14.0",
+    "babel-core": "^6.13.2",
     "babel-loader": "6.2.5",
-    "babel-plugin-transform-class-properties": "6.11.5",
-    "babel-plugin-transform-object-rest-spread": "6.8.0",
-    "babel-plugin-transform-react-constant-elements": "6.9.1",
-    "babel-plugin-transform-regenerator": "6.14.0",
-    "babel-plugin-transform-runtime": "6.15.0",
-    "babel-preset-latest": "6.14.0",
+    "babel-polyfill": "6.13.0",
+    "babel-preset-es2015": "6.14.0",
     "babel-preset-react": "6.11.1",
-    "babel-runtime": "6.11.6",
-    "case-sensitive-paths-webpack-plugin": "1.1.3",
-    "chalk": "1.1.3",
-    "connect-history-api-fallback": "1.3.0",
-    "cross-spawn": "4.0.0",
-    "css-loader": "0.24.0",
-    "detect-port": "1.0.0",
+    "babel-preset-stage-2": "6.13.0",
+    "babel-register": "6.14.0",
+    "browserslist": "^1.3.5",
+    "copy-webpack-plugin": "3.0.1",
+    "cross-env": "2.0.1",
+    "css-loader": "0.25.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
-    "filesize": "3.3.0",
-    "fs-extra": "0.30.0",
-    "gzip-size": "3.0.0",
-    "html-loader": "0.4.3",
     "html-webpack-plugin": "2.22.0",
-    "http-proxy-middleware": "0.17.1",
-    "json-loader": "0.5.4",
-    "object-assign": "4.1.0",
-    "opn": "4.0.2",
-    "path-exists": "3.0.0",
-    "postcss-loader": "0.11.1",
-    "promise": "7.1.1",
-    "recursive-readdir": "2.0.0",
+    "husky": "0.11.7",
+    "json-loader": "^0.5.4",
+    "postcss": "5.2.0",
+    "postcss-cssnext": "2.8.0",
+    "postcss-import": "8.1.2",
+    "postcss-loader": "0.13.0",
+    "postcss-reporter": "1.4.1",
+    "postcss-simple-vars": "3.0.0",
+    "postcss-url": "5.1.2",
+    "raw-loader": "0.5.1",
     "rimraf": "2.5.4",
     "standard": "8.0.0",
-    "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
     "stylelint": "7.2.0",
+    "stylelint-config-standard": "13.0.0",
+    "stylelint-selector-bem-pattern": "1.0.0",
     "url-loader": "0.5.7",
     "webpack": "1.13.2",
-    "webpack-dev-server": "1.15.1",
-    "whatwg-fetch": "1.0.0"
+    "webpack-dev-server": "1.15.2"
   },
   "dependencies": {
     "react": "15.3.1",
     "react-dom": "15.3.1",
-    "react-router": "2.7.0",
+    "react-router": "2.8.1",
     "tachyons": "4.3.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "cross-env NODE_ENV=production webpack -p",
+    "clean": "rimraf build",
+    "test": "npm run lint:js && npm run lint:css",
+    "lint:js": "eslint \"./src\"",
+    "lint:css": "stylelint \"./src/**/*.css\"",
+    "prebuild": "npm run clean",
+    "prestart": "npm prune && npm install",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
     "deploy": "./deploy.sh"
   }
 }
