--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "15.3.1",
     "react-dom": "15.3.1",
     "react-router": "2.8.1",
+    "sanitize.css": "4.1.0",
     "tachyons": "4.3.1"
   },
   "scripts": {
